# agent-os

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MIGRATION.md  NOTICE  README.md  README.product.md  README.release.md  RELEASES.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  agentos.toml.example  compose.yaml  install.ps1  install.sh  pyproject.toml  skills-lock.json  start.ps1  start.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  docs_report.yml  feature_request.yml
.github/scripts/: classify-ci-changes.sh
.github/workflows/: ci.yml  frontend.yml  live-release-e2e.yml  llm-e2e.yml  pypi-publish.yml  webui-browser-smoke.yml  wheelhouse-release.yml
.superpowers/sdd/: .gitignore  task-6-report.md
Formula/: agentos.rb
docs/: README.md  agents.md  approvals-and-permissions.md  artifacts-and-media.md  channels.md  cli.md  configuration.md  contributing-docs.md  diagnostics-and-replay.md  features.md  gateway.md  glossary.md  http-api.md  mcp-server.md  operations.md  providers-and-models.md  quickstart.md  scheduling.md  search.md  sessions.md  setup-guide.html  tools-and-sandbox.md  troubleshooting.md  usage-and-cost.md  use-cases.md  web-ui.md
docs/features/: agentos-router.md  compaction-and-cache.md  memory.md  skills.md  tool-compression.md
frontend/: components.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: theme-bootstrap.js
frontend/scripts/: check-bundle-budget.mjs
frontend/src/: main.tsx
migrations/: V001__initial_schema.py  V002__scheduler_session_fields.py  V003__heartbeat_ticks.py  V004__memory_schema_version.py  V005__agent_tasks.py  V006__scheduler_reservations.py  V007__session_cost_source_rollup.py  V008__scheduler_job_tool_policy.py  V009__transcript_reasoning_content.py  V010__transcript_turn_usage.py
scripts/: __init__.py  build_control_ui.py  build_wheelhouse_zip.py  install_source.ps1  install_source.sh  live_deepseek_tool_replay_smoke.py  live_long_context_chat_smoke.py  live_openrouter_prompt_cache_smoke.py  live_provider_profile_gateway_e2e.py  live_provider_profile_smoke.py  live_provider_thinking_smoke.py  router_eval.py  run_public_release_golden_prompts.py  smoke_llm_judge_router.py
scripts/pilot_router/: DATA.md  __init__.py  benchmark_features.py  corpus_meta.json  eval_lib.py  eval_meta.json  eval_report.md  evaluate.py  export_embedder.py  export_model.py  label_corpus.py  labels_meta.json  make_fixture_model.py  mine_hard_candidates.py  rubric.md  sample_corpus.py  train.py  train_lib.py  training_meta.json
service-units/launchd/: dev.useagentos.gateway.plist
service-units/systemd/: agentos.service
service-units/windows/: agentos-task.xml
src/agentos/: __init__.py  artifacts.py  asyncio_utils.py  attachment_refs.py  bootstrap_types.py  channel_pairing.py  context_budget.py  env.py  execution_status.py  gateway_client.py  paths.py  permissions.py  result_budget.py  router_control.py  router_strategies.py  router_tiers.py  secrets.py  tool_boundary.py  ui.py
tests/: conftest.py  test_agent_cmd_no_key.py  test_artifacts.py  test_bundled_voice_skills.py  test_cli_skills_search_escape.py  test_compose_yaml_shape.py  test_context_budget_governor.py  test_core_lightweight_contracts.py  test_execution_status_contract.py  test_frontend_third_party_notices.py  test_gateway_config_legacy.py  test_gateway_config_retired_channels_migration.py  test_gateway_static_skills_view.py  test_install_scripts.py  test_live_provider_profile_gateway_e2e.py  test_live_provider_profile_smoke.py  test_memory_archive.py  test_memory_checkpoint.py  test_memory_curated_config.py  test_memory_curated_injection.py  test_memory_curated_status.py  test_memory_curated_store.py  test_memory_curated_tool.py  test_memory_dream_apply.py  test_memory_dream_evidence.py  test_memory_dream_factory.py  test_memory_dream_paths.py  test_memory_dream_ranking.py  test_memory_dream_runner.py  test_memory_embedding.py  test_memory_embedding_models.py  test_memory_flush.py  test_memory_flush_status.py  test_memory_manager_embedding_config.py  test_memory_model_download.py  test_memory_repair_service.py  test_memory_search_defaults.py  test_memory_sessions_source.py  test_memory_store_keyword_fallback.py  test_memory_sync_manager_architecture.py  (+63 more)
tests/functional/: test_agent_context_boundary_e2e.py  test_agent_synthetic_golden.py  test_gateway_compaction_e2e.py  test_gateway_llm_e2e.py  test_live_agent_context_boundary_e2e.py  test_live_channel_telegram_smoke.py  test_live_openrouter_compaction.py  test_llm_smoke.py  test_webui_browser_chat_e2e.py  test_webui_browser_e2e.py  test_webui_per_turn_bubble.py
tests/golden/: public_release_open.yaml
tests/test_agentos_router/: test_controller_derivation.py  test_llm_judge_strategy.py  test_pilot_encoder.py  test_pilot_encoder_contract_parity.py  test_pilot_golden.py  test_pilot_model.py  test_pilot_strategy.py  test_pilot_train_smoke.py  test_pilot_train_v2_configs.py  test_v4_phase3_bundle.py
tests/test_application/: test_approval_rpc.py  test_wizard.py
tests/test_channels/: test_base_imports.py  test_channel_attachment_metadata.py  test_channel_capabilities.py  test_channel_command_registry.py  test_channel_dedupe.py  test_channel_manager_lifecycle.py  test_channel_native_file_uploads.py  test_channel_pairing_store.py  test_discord_routing.py  test_native_commands.py  test_session_key_contract.py  test_slack_socket_mode.py  test_telegram_access_approvals.py  test_telegram_retry.py
tests/test_ci/: test_architecture_import_contracts.py  test_decision_log_aggregate.py  test_migrations_packaged.py  test_mypy_partition_gate.py  test_workflows.py
tests/test_cli/: test_agent_cmd.py  test_agents_cmd.py  test_channels_cmd.py  test_chat_cmd.py  test_chat_cmd_approval.py  test_chat_file_command.py  test_chat_path_command.py  test_cli_product_completeness.py  test_cron_cmd.py  test_diagnostics_cmd.py  (+28 more)
(+1327 files in other folders)
